--- a/smart_logger/front_page/template/t_parameter_display.html
+++ b/smart_logger/front_page/template/t_parameter_display.html
@@ -98,7 +98,7 @@
         {% endfor %}</p>
 
     <b>
-        记录下的数据.
+        记录了以下的数据.
     </b>
     <p>
         {% for desc in recorded_data %}
