--- a/smart_logger/front_page/template/t_param_adapt.html
+++ b/smart_logger/front_page/template/t_param_adapt.html
@@ -121,6 +121,69 @@
             let form_rename = document.getElementById('frm_rename_separator_rule');
             form_rename.submit();
         }
+        function getScrollTop(){
+            var scrollTop=0;
+            if(document.documentElement&&document.documentElement.scrollTop){
+                scrollTop=document.documentElement.scrollTop;
+            }else if(document.body){
+                scrollTop=document.body.scrollTop;
+            }
+            return scrollTop;
+        }
+        function getScrollTopElement(element){
+            var scrollTop=0;
+            if(element && element.scrollTop){
+                scrollTop=element.scrollTop;
+            }
+            return scrollTop;
+        }
+        function on_url_click(){
+            localStorage.setItem("scroll_top", getScrollTop());
+        }
+        function scroll_to_history(){
+            var totop = 0;
+            if (localStorage.hasOwnProperty('scroll_top')){
+               totop = localStorage.getItem("scroll_top");
+            }
+            else{
+               totop = 0;
+            }
+            window.scrollTo(0,totop);
+        }
+        function scroll_to_history_element(element, name){
+            var totop = 0;
+            if (localStorage.hasOwnProperty(name)){
+               totop = localStorage.getItem(name);
+            }
+            else{
+               totop = 0;
+            }
+            element.scrollTo(0,totop);
+        }
+        window.addEventListener('scroll',(event) => {
+                localStorage.setItem("scroll_top", getScrollTop());
+      });
+
+        function www_onload(){
+            set_option();
+            scroll_to_history();
+            document.getElementById('filter_box_id').addEventListener('scroll', (event) => {
+            localStorage.setItem("scroll_top_filter", getScrollTopElement(document.getElementById('filter_box_id')));
+        })
+        document.getElementById('rename_box_id').addEventListener('scroll', (event) => {
+            localStorage.setItem("scroll_top_rename", getScrollTopElement(document.getElementById('rename_box_id')));
+        })
+        document.getElementById('merge_box_id').addEventListener('scroll', (event) => {
+            localStorage.setItem("scroll_top_merge", getScrollTopElement(document.getElementById('merge_box_id')));
+        })
+        document.getElementById('plotting_order_id').addEventListener('scroll', (event) => {
+            localStorage.setItem("scroll_top_plot", getScrollTopElement(document.getElementById('plotting_order_id')));
+        })
+            scroll_to_history_element(document.getElementById('filter_box_id'), 'scroll_top_filter');
+            scroll_to_history_element(document.getElementById('rename_box_id'), 'scroll_top_rename');
+            scroll_to_history_element(document.getElementById('merge_box_id'), 'scroll_top_merge');
+            scroll_to_history_element(document.getElementById('plotting_order_id'), 'scroll_top_plot');
+        }
     </script>
     <style>
         .main_images {
@@ -337,6 +400,30 @@
             top: 160%;
         }
 
+        .plotting_order {
+            font-family:monospace;
+            position: absolute;
+            left: 5%;
+            text-align: left;
+            width: 50%;
+            background-color:rgba(255,255,255,0.8);
+            height: 50%;
+            overflow: scroll;
+            top: 195%;
+        }
+
+        .future_work {
+            font-family:monospace;
+            position: absolute;
+            left: 58%;
+            text-align: left;
+            width: 40%;
+            background-color:rgba(255,255,255,0.8);
+            height: 50%;
+            overflow: scroll;
+            top: 195%;
+        }
+
         .rename_box_data_key li a{
                 /*font-family:"Arial";*/
             font-family:monospace;
@@ -365,7 +452,7 @@
             background-color:rgba(0,0,0,0.3);
             height: 1px;
             overflow: scroll;
-            top: 200%;
+            top: 260%;
         }
     .line_button {
     position: absolute;
@@ -384,7 +471,7 @@
 
 <html>
 <title>实验记录.</title>
-<body onload="set_option()">
+<body onload="www_onload()">
 <h2> 实验记录 </h2>
 <div class="topcorner">
     <ul>
@@ -410,7 +497,7 @@
 {% for exp_name_ind in range(exp_data|length) %}
 
  <li><a href="{{url_for('obtain_experiment_parameter', folder_name=exp_data_encoded[exp_name_ind])}}">+ {{alg_idx[exp_name_ind]+1}}: {{loop.index0+1}}. {{exp_data[exp_name_ind]}} ({{nick_name_list[exp_name_ind]}})</a> </li>
-    {% if exp_name_ind + 1 < exp_data|length and alg_idx[exp_name_ind+1] > alg_idx[exp_name_ind] %}
+    {% if exp_name_ind + 1 < exp_data|length and alg_idx[exp_name_ind+1] > alg_idx[exp_name_ind] and nick_name_list[exp_name_ind] !=  nick_name_list[exp_name_ind+1]%}
     <li><a href="#">{{'-' * exp_data[exp_name_ind+1]|length}}</a></li>
     {% endif %}
 {% endfor %}
@@ -424,7 +511,7 @@
 </p>
 </div>
 
-<div class="filter_box">
+<div class="filter_box" id="filter_box_id">
     <h3>过滤条件, 符合以下任意条件的数据将会被过滤, 不会用于分析与绘图</h3>
     <p style="margin: 10px">
     {% for item_dict in data_ignore %}
@@ -438,6 +525,7 @@
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- {{k}} = {{v}};{% if loop.index0+1< (item_dict | length) %}<br/>{% endif %}
         {% endif %}
         {% endfor %}
+        <br/>
         <br/>
         {% endfor %}
 
@@ -527,7 +615,7 @@
         </p>
     </form>
 </div>
-<div class="merge_box">
+<div class="merge_box" id="merge_box_id">
     <h3>合并条件, 合并条件对应值一致的被认为是同一算法</h3>
     <form name="frm_merge" id="frm_merge_selection" action="{{url_for('merge_process')}}"  method="POST">
        <table style="margin: 5px">
@@ -569,7 +657,7 @@
     </form>
 </div>
 
-<div class="rename_box">
+<div class="rename_box" id="rename_box_id">
     <h3>重命名规则, 将自动命名的算法名称 (图例的标签) 重命名的规则</h3>
     {% for k, v in rename_rule %}
         &nbsp;&nbsp;>RENAME_RULE[{{loop.index0}}]
@@ -577,6 +665,7 @@
         <a href="{{url_for('ignore_with_renamed', rule_idx=loop.index0)}}" style="font-family: monospace">不绘制</a>
         <br/>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- {{v}} --> {{k}};
+        <br/>
         <br/>
         {% endfor %}
     <form name="frm_rename_select" action="{{url_for('add_rename')}}" method="POST">
@@ -654,6 +743,35 @@
         <div align="center" style="margin: 5px">
             <button type="submit" style="width:60px;height:30px">添加</button></div>
     </form>
+</div>
+
+<div class="plotting_order" id="plotting_order_id">
+    <h3>曲线绘制顺序</h3>
+    <h3>已标序</h3>
+    {% for item in exists_ordered_curves %}
+        &nbsp;&nbsp;> [ {{loop.index0}} ] {{item}}&nbsp;&nbsp; <a href="{{url_for('change_plot_order', alg_name=exists_ordered_curves_encode[loop.index0], idx=loop.index0, method='top')}}" style="font-family: monospace">置顶</a>
+        <a href="{{url_for('change_plot_order', alg_name=exists_ordered_curves_encode[loop.index0], idx=loop.index0, method='down')}}" style="font-family: monospace">置尾</a>
+        <a href="{{url_for('change_plot_order', alg_name=exists_ordered_curves_encode[loop.index0], idx=loop.index0, method='up_once')}}" style="font-family: monospace">上移一级</a>
+        <a href="{{url_for('change_plot_order', alg_name=exists_ordered_curves_encode[loop.index0], idx=loop.index0, method='down_once')}}" style="font-family: monospace">下移一级</a>
+        <a href="{{url_for('change_plot_order', alg_name=exists_ordered_curves_encode[loop.index0], idx=loop.index0, method='remove')}}" style="font-family: monospace">删除</a>
+        <br/>
+        <br/>
+    {% endfor %}
+    &nbsp;&nbsp;> [ ----- ] 集体操作&nbsp;&nbsp; <a href="{{url_for('change_plot_order', alg_name='All', idx='None', method='remove_all')}}" style="font-family: monospace">全部删除</a>
+    <h3>未标序</h3>
+    {% for item in remain_unordered_curves %}
+            &nbsp;&nbsp;> {{item}}&nbsp;&nbsp;<a href="{{url_for('change_plot_order', alg_name=remain_unordered_curves_encode[loop.index0], idx=loop.index0, method='top')}}" style="font-family: monospace">置顶</a>
+        <a href="{{url_for('change_plot_order', alg_name=remain_unordered_curves_encode[loop.index0], idx=loop.index0, method='down')}}" style="font-family: monospace">置尾</a>
+        <br/>
+        <br/>
+    {% endfor %}
+                &nbsp;&nbsp;> placeholder&nbsp;&nbsp;<a href="{{url_for('change_plot_order', alg_name='placeholder', idx='None', method='top')}}" style="font-family: monospace">置顶</a>
+        <a href="{{url_for('change_plot_order', alg_name='placeholder', idx='None', method='down')}}" style="font-family: monospace" >置尾</a>
+</div>
+<div class="future_work">
+    <h3>正在施工...</h3>
+
+
 </div>
 <div class="bottom_box">
 </div>
