--- a/smart_logger/front_page/template/t_experiment.html
+++ b/smart_logger/front_page/template/t_experiment.html
@@ -54,6 +54,7 @@
     <li><a href="{{url_for('hello')}}">实验列表</a></li>
     <li><a href="{{url_for('param_adjust')}}">绘图参数</a></li>
     <li><a href="{{url_for('plot')}}">对比绘图</a></li>
+    <li><a href="{{url_for('table')}}">表格统计</a></li>
 </ul>
     <h3>共有{{exp_folder_list | length}}项记录</h3>
 
