--- a/smart_logger/front_page/template/t_param_adapt.html
+++ b/smart_logger/front_page/template/t_param_adapt.html
@@ -96,7 +96,7 @@
                   location.href="{{url_for('param_adjust')}}";
               }
               };
-            httpRequest.open('GET', "{{url_for('create_config')}}", false);
+            httpRequest.open('GET', "{{url_for('query_table')}}", false);
             httpRequest.send();
         }
         function delete_config(){
@@ -482,6 +482,7 @@
     <li><a href="{{url_for('hello')}}">实验列表</a></li>
     <li><a href="{{url_for('param_adjust')}}">绘图参数</a></li>
     <li><a href="{{url_for('plot')}}">对比绘图</a></li>
+    <li><a href="{{url_for('table')}}">表格统计</a></li>
 </ul>
 
 <h3>绘图参数修改</h3>
