--- a/smart_logger/front_page/template/t_parameter_display.html
+++ b/smart_logger/front_page/template/t_parameter_display.html
@@ -65,6 +65,7 @@
     <li><a href="{{url_for('hello')}}">实验列表</a></li>
     <li><a href="{{url_for('param_adjust')}}">绘图参数</a></li>
     <li><a href="{{url_for('plot')}}">对比绘图</a></li>
+    <li><a href="{{url_for('table')}}">表格统计</a></li>
 </ul>
 <h3>{{name}}详情</h3>
 <div class="main_images">
