--- a/smart_logger/front_page/template/t_param_adapt.html
+++ b/smart_logger/front_page/template/t_param_adapt.html
@@ -569,7 +569,7 @@
     </form>
 </div>
 <div class="choose_config">
-    <form name="frm_rename_config_choose_select" id="frm_rename_config_choose_select" action="{{url_for('choose_config')}}" method="POST">
+    <form name="frm_rename_config_choose_select" id="frm_rename_config_choose_select" action="{{url_for('choose_config', source='adapt')}}" method="POST">
         <div align="left" style="margin: 20px">
         <p>
             <label for="choose_config_cb" style="font-family: monospace">选择设定:</label>
