--- a/smart_logger/front_page/template/t_table.html
+++ b/smart_logger/front_page/template/t_table.html
@@ -22,15 +22,15 @@
                   MathJax.Hub.Queue(["Typeset", MathJax.Hub]);
               }
               };
-            httpRequest.open('GET', "{{url_for('query_table')}}", false);
+            httpRequest.open('GET', "{{url_for('query_table')}}", true);
             httpRequest.send();
         }
         function load_table(){
             var table = document.getElementById('table_html_id');
             var button = document.getElementById('table_loading_button_id')
             console.log('start loading')
-            table.innerHTML = "加载中";
             button.innerHTML = "加载中";
+            table.innerHTML = "加载中";
             query_table();
         }
         function finish_query(data){
@@ -51,7 +51,7 @@
                   finish_source(table.innerHTML);
               }
               };
-            httpRequest.open('GET', "{{url_for('query_table_source', use_latex=True)}}", false);
+            httpRequest.open('GET', "{{url_for('query_table_source', use_latex=True)}}", true);
             httpRequest.send();
         }
         function query_source_md(){
@@ -64,7 +64,7 @@
                   finish_source(table.innerHTML);
               }
               };
-            httpRequest.open('GET', "{{url_for('query_table_source', use_latex=False)}}", false);
+            httpRequest.open('GET', "{{url_for('query_table_source', use_latex=False)}}", true);
             httpRequest.send();
         }
         function load_source_latex(){
@@ -126,6 +126,12 @@
                }
             }
         }
+        function change_config_cb(){
+            let form_rename = document.getElementById('frm_rename_config_choose_select');
+            let config_selection = document.getElementById("choose_config_cb");
+            let selected_config = config_selection.options[config_selection.selectedIndex].value;
+            form_rename.submit();
+        }
     </script>
     <style>
         table {
@@ -171,6 +177,12 @@
             line-height: 25px;
             font-size: 15px;
             /*font-style: italic;*/
+        }
+        .choose_config {
+                        font-family:monospace;
+            position: absolute;
+            left: 10%;
+            top: 10%;
         }
         .for_button2 {
             position: absolute;
@@ -254,9 +266,7 @@
     <li><a href="{{url_for('plot')}}">对比绘图</a></li>
     <li><a href="{{url_for('table')}}">表格统计</a></li>
 </ul>
-<h3>表格绘制: {{config_name}}</h3>
-<div class="for_button">
-            <button type="button" style="width:80px;height:30px" id="table_loading_button_id" onclick="load_table()">构建表格</button></div>
+<h3>表格绘制</h3>
 <div id="table_html_id" class="main_images" style="overflow-x:auto;">
     请点击 构建表格 按钮...
 </div>
@@ -268,6 +278,21 @@
 </div>
 <div class="bottom_image" id="source_div_id">
     <h3>快捷代码</h3>
+</div>
+<div class="choose_config">
+    <form name="frm_rename_config_choose_select" id="frm_rename_config_choose_select" action="{{url_for('choose_config', source='table')}}" method="POST">
+        <div align="left" style="margin: 20px">
+        <p>
+            <label for="choose_config_cb" style="font-family: monospace">选择设定:</label>
+            <select id="choose_config_cb" name="chosen_config" onchange="change_config_cb()">
+                {% for item in config_file_list %}
+                  <option value ="{{item}}" {% if item == config_name %} selected {% endif %}>{{item}}</option>
+                {% endfor %}
+            </select>
+                        <button type="button" style="width:80px;height:30px" id="table_loading_button_id" onclick="load_table()" >构建表格</button>
+        </p>
+        </div>
+    </form>
 </div>
 <div class="bottom">
 </div>
