--- a/smart_logger/front_page/template/t_plot.html
+++ b/smart_logger/front_page/template/t_plot.html
@@ -58,13 +58,14 @@
             background-color: rgba(255, 255, 255, 0.8);
             height: 80%;
             overflow: scroll;
+            top: 17%;
 
         }
         .right_image{
             position: absolute;
             left: 37%;
             width: 75%;
-
+            top: 17%;
         }
 
         .main_images p {
