--- a/smart_logger/front_page/template/t_table.html
+++ b/smart_logger/front_page/template/t_table.html
@@ -155,6 +155,7 @@
             background-color: rgba(255, 255, 255, 0.8);
             height: 80%;
             overflow: scroll;
+            top: 17%;
         }
         .for_button {
             position: absolute;
