fix potential bug in figure cache

--- a/smart_logger/front_page/template/t_param_adapt.html
+++ b/smart_logger/front_page/template/t_param_adapt.html
@@ -96,7 +96,7 @@
                   location.href="{{url_for('param_adjust')}}";
               }
               };
-            httpRequest.open('GET', "{{url_for('query_table')}}", false);
+            httpRequest.open('GET', "{{url_for('create_config')}}", false);
             httpRequest.send();
         }
         function delete_config(){
