--- a/smart_logger/front_page/template/t_param_adapt.html
+++ b/smart_logger/front_page/template/t_param_adapt.html
@@ -117,6 +117,10 @@
             let form_rename = document.getElementById('frm_merge_selection');
             form_rename.submit();
         }
+        function submit_change_filter_mode(){
+            let form_rename = document.getElementById('change_filter_rule_mode_id');
+            form_rename.submit();
+        }
         function submit_separator(){
             let form_rename = document.getElementById('frm_rename_separator_rule');
             form_rename.submit();
@@ -216,7 +220,10 @@
             text-indent:-58px;
             /*pointer-events: none;*/
         }
-
+        .main_images li a b{
+            font-family:monospace;
+            font-size: 14px;
+        }
         .filter_box {
             position: absolute;
             left: 58%;
@@ -256,13 +263,14 @@
             text-align: left;
             width: 40%;
             background-color:rgba(255,255,255,0.8);
-            height: 40%;
+            height: 42%;
             overflow: scroll;
             top: 60%;
             font-family:monospace;
         }
-        .merge_box p{
-            margin: 10px;
+        p{
+            margin: 15px;
+            font-family:monospace;
         }
         .merge_box p label{
             font-family:monospace;
@@ -272,7 +280,9 @@
             /*display: inline-block;*/
             line-height:15px;
         }
-
+        p b{
+            font-size: 13px;
+        }
         .merge_box li a{
                 /*font-family:"Arial";*/
             font-family:monospace;
@@ -497,7 +507,7 @@
     <p style="margin-top=20px;">
 {% for exp_name_ind in range(exp_data|length) %}
 
- <li><a href="{{url_for('obtain_experiment_parameter', folder_name=exp_data_encoded[exp_name_ind])}}">+ {{alg_idx[exp_name_ind]+1}}: {{loop.index0+1}}. {{exp_data[exp_name_ind]}} ({{nick_name_list[exp_name_ind]}})</a> </li>
+ <li><a href="{{url_for('obtain_experiment_parameter', folder_name=exp_data_encoded[exp_name_ind])}}">+ {{alg_idx[exp_name_ind]+1}}: {{loop.index0+1}}. {{exp_data[exp_name_ind]}} (<b>{{nick_name_list[exp_name_ind]}}</b>)</a> </li>
     {% if exp_name_ind + 1 < exp_data|length and alg_idx[exp_name_ind+1] > alg_idx[exp_name_ind] and nick_name_list[exp_name_ind] !=  nick_name_list[exp_name_ind+1]%}
     <li><a href="#">{{'-' * exp_data[exp_name_ind+1]|length}}</a></li>
     {% endif %}
@@ -507,15 +517,29 @@
     <h3>共有{{exp_data_ignores | length}}项被过滤的记录, 这些数据<u>不会</u>被用于分析与绘图</h3>
     <p style="margin-top=20px;">
 {% for exp_name_idx in range(exp_data_ignores|length) %}
- <li><a href="{{url_for('obtain_experiment_parameter', folder_name=exp_data_ignores_encoded[exp_name_idx])}}">- {{loop.index0 + 1 + exp_data | length}}. {{exp_data_ignores[exp_name_idx]}}</a></li>
+    <li><a href="{{url_for('obtain_experiment_parameter', folder_name=exp_data_ignores_encoded[exp_name_idx])}}">- {{loop.index0 + 1 + exp_data | length}}. {{exp_data_ignores[exp_name_idx]}} (<b>{{nick_name_ignore_list[exp_name_idx]}}</b>)</a></li>
+    {% if exp_name_idx + 1 < exp_data_ignores|length and alg_idxs_ignore[exp_name_idx+1] > alg_idxs_ignore[exp_name_idx] and nick_name_ignore_list[exp_name_idx] !=  nick_name_ignore_list[exp_name_idx+1]%}
+    <li><a href="#">{{'-' * exp_data_ignores[exp_name_idx+1]|length}}</a></li>
+    {% endif %}
 {% endfor %}
 </p>
 </div>
 
 <div class="filter_box" id="filter_box_id">
-    <h3>过滤条件, 符合以下任意条件的数据将会被过滤, 不会用于分析与绘图</h3>
+    {% if filter_data_with_ignore %}
+    <h3>数据过滤条件</h3>
+    <p><b>说明</b>：你可以通过这一栏来选择哪些日志数据需要被用于绘图/制表。左栏中，有效数据会被用于绘图，而被过滤的记录不会用于绘图。所有被过滤的数据均满足以下条件之一。添加数据过滤条件可以新增被过滤的记录，删除反之。</p>
+    {% else %}
+    <h3>数据选择条件</h3>
+    <p><b>说明</b>：你可以通过这一栏来选择哪些日志数据需要被用于绘图/制表。左栏中，有效数据会被用于绘图，而被过滤的记录不会用于绘图。所有有效数据均满足以下条件之一。添加数据选择条件可以新增有效记录，删除反之。</p>
+    {% endif %}
+    <form name="change_filter_rule_mode_frm" id="change_filter_rule_mode_id" action="{{url_for('change_filter_rule')}}" method="POST" style="margin: 15px">
+        <input type="checkbox" name="filter_data_with_ignore" id="filter_data_with_ignore_id" value="filter_data_with_ignore_value" {% if filter_data_with_ignore %}checked="checked" {%endif%} onchange="submit_change_filter_mode()">
+        <label for="filter_data_with_ignore_id" style="font-family: monospace">是否通过过滤的方式来进行日志筛选。</label>
+    </form>
     <p style="margin: 10px">
-    {% for item_dict in data_ignore %}
+        {% if filter_data_with_ignore %}
+        {% for item_dict in data_ignore %}
         &nbsp;&nbsp;>DATA_IGNORE[{{loop.index0}}]
         <a href="{{url_for('del_ignore', rule_idx=loop.index0)}}" style="font-family: monospace">删除</a>
         <br/>
@@ -529,7 +553,18 @@
         <br/>
         <br/>
         {% endfor %}
-
+{% else %}
+        {% for item_dict in data_choose_rule %}
+        &nbsp;&nbsp;>DATA_CHOOSE[{{loop.index0}}]
+        <a href="{{url_for('del_ignore', rule_idx=loop.index0)}}" style="font-family: monospace">删除</a>
+        <br/>
+        {% for k, v in item_dict.items() %}
+        &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- {{k}} = {{v}};{% if loop.index0+1< (item_dict | length) %}<br/>{% endif %}
+        {% endfor %}
+        <br/>
+        <br/>
+        {% endfor %}
+        {% endif %}
     </p>
 
 <!--    <form name="frm_split" action="#"  method="POST">-->
@@ -544,7 +579,7 @@
     <form name="frm_split_select">
         <div align="left" style="margin: 20px">
         <p>
-            <label for="added_rule_select_cb" style="font-family: monospace">新增的过滤规则 (格式: aaa=xxx;bbb=yyy;):</label> <br/>
+            <label for="added_rule_select_cb" style="font-family: monospace">新增的{% if filter_data_with_ignore %}过滤{% else %}数据选择{% endif %}规则 (格式: aaa=xxx;bbb=yyy;):</label> <br/>
         <input type="text" name="added_rule" id="added_rule_select_cb" value="" style="width: 400px; background-color:#EFEFEF;" readonly="" >
         </p>
         </div>
@@ -617,7 +652,11 @@
     </form>
 </div>
 <div class="merge_box" id="merge_box_id">
-    <h3>合并条件, 合并条件对应值一致的被认为是同一算法</h3>
+    <h3>算法自动命名依据</h3>
+    <p>
+        <b>说明</b>：你可以通过这一栏来指定能够区分不同算法的参数名。每个日志都会根据下列所选择的参数名以及该参数的值对算法进行自动命名。
+        算法名相同的日志将会被认为是同一算法且同一参数跑出来的结果。
+    </p>
     <form name="frm_merge" id="frm_merge_selection" action="{{url_for('merge_process')}}"  method="POST">
        <table style="margin: 5px">
     {% for k, v, v1 in merge_config_file %}
@@ -636,7 +675,11 @@
 </div>
 
 <div class="draw_box">
-    <h3>绘制类型, 从日志文件中选出以下数据对进行分别绘制</h3>
+    <h3>对比类型配置</h3>
+    <p>
+        <b>说明</b>：你可以通过这一栏来配置需要拿日志中的哪些数据去进行绘图。X表示需要绘制的图像的横坐标对应的数据的键（key），Y表示纵坐标对应的数据键。
+        对于每一个X-Y数据键对，都会绘制一张以X数据为横轴，以Y数据为纵轴的曲线图。
+    </p>
     {% for k, v in plotting_xy %}
         &nbsp;&nbsp;>XY[{{loop.index0}}]
         <a href="{{url_for('del_xy', rule_idx=loop.index0)}}" style="font-family: monospace">删除</a>
@@ -659,11 +702,17 @@
 </div>
 
 <div class="rename_box" id="rename_box_id">
-    <h3>重命名规则, 将自动命名的算法名称 (图例的标签) 重命名的规则</h3>
+    <h3>算法重命名</h3>
+    <p>
+        <b>说明</b>：你可以用这一栏来对自动命名的算法名进行重命名。<br/>
+        <b>使用场景</b>：你认为自动命名的算法名过于冗长，可以对其进行简要的缩写时。
+    </p>
     {% for k, v in rename_rule %}
         &nbsp;&nbsp;>RENAME_RULE[{{loop.index0}}]
         <a href="{{url_for('del_rename', rule_idx=loop.index0)}}" style="font-family: monospace">删除</a>
+        {% if filter_data_with_ignore %}
         <a href="{{url_for('ignore_with_renamed', rule_idx=loop.index0)}}" style="font-family: monospace">不绘制</a>
+        {% endif %}
         <br/>
         &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- {{v}} --> {{k}};
         <br/>
@@ -688,7 +737,7 @@
     {% if possible_short_name | length > 0 %}
     <h3>未命名数据</h3>
     {% for short_name in possible_short_name %}
-      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- {{loop.index0}}. {{short_name}} <a href="{{url_for('ignore_with_unnamed', rule_idx=loop.index0)}}" style="font-family: monospace">不绘制</a>
+      &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- {{loop.index0}}. {{short_name}} {% if filter_data_with_ignore %} <a href="{{url_for('ignore_with_unnamed', rule_idx=loop.index0)}}" style="font-family: monospace">不绘制</a> {% endif %}
  <br/>
     {% endfor %}
     <br/>
@@ -697,7 +746,11 @@
 </div>
 
 <div class="rename_box_data_key">
-    <h3>重命名规则, 将某些数据的键重命名为别的名字</h3>
+    <h3>数据重命名</h3>
+    <p>
+        <b>说明</b>：你可以用这一栏对数据的某些键（key）进行重命名。<br/>
+        <b>使用场景</b>：当你有两份日志A、B，且两份日志中的某些数据含义是一致的，但是这些数据对应的键（key）不一致。你可以用数据重命名对这些键进行重命名。
+    </p>
     {% for k, v in rename_rule_data %}
         &nbsp;&nbsp;>RENAME_DATA_KEY_RULE[{{loop.index0}}]
         <a href="{{url_for('del_data_rename', rule_idx=loop.index0)}}" style="font-family: monospace">删除</a>
@@ -720,8 +773,11 @@
     </form>
 </div>
 <div class="separator_box">
-    <h3>子图分隔规则, 合并条件对应值一致的被放入同一子图</h3>
-
+    <h3>子图分隔配置</h3>
+    <p>
+        <b>说明</b>：你可以通过这一栏配置每个子图中应该绘制什么样的内容。日志将会由以下所选择的属性进行分类，分类依据是以下所选择的属性。相同类别日志对应的属性是一致的。<br/>
+        <b>使用场景</b>：一般情况下，这个分隔配置可以设为任务名或者环境名，这样日志会根据任务名或者环境名对日志进行分类，同时把任务/环境不一样的日志分别画到不同的子图。
+    </p>
     {% for separator_item in separators %}
         &nbsp;&nbsp;>{{loop.index0}}. {{separator_item}}
         <a href="{{url_for('del_separator', rule_idx=loop.index0)}}" style="font-family: monospace">删除</a>
@@ -747,7 +803,10 @@
 </div>
 
 <div class="plotting_order" id="plotting_order_id">
-    <h3>曲线绘制顺序 (影响线的颜色、线型)</h3>
+    <h3>绘制顺序</h3>
+    <p>
+        <b>说明</b>：你可以通过本栏来配置哪些不同算法在图像绘制时的绘制顺序。越接近顶部的数据会被越早绘制。主要注意，这个顺序回影响曲线的颜色与线型，如第一个绘制的算法必是红色曲线（圆形标记）。
+    </p>
     <h3>已标序</h3>
     {% for item in exists_ordered_curves %}
         &nbsp;&nbsp;> [ {{loop.index0}} ] {{item}}&nbsp;&nbsp; <a href="{{url_for('change_plot_order', alg_name=exists_ordered_curves_encode[loop.index0], idx=loop.index0, method='top')}}" style="font-family: monospace">置顶</a>
@@ -770,7 +829,10 @@
         <a href="{{url_for('change_plot_order', alg_name='placeholder', idx='None', method='down')}}" style="font-family: monospace" >置底</a>
 </div>
 <div class="legend_order">
-    <h3>图例顺序 (影响图例中的排序)</h3>
+    <h3>图例顺序</h3>
+    <p>
+        <b>说明</b>：你可以通过本栏来确定算法在图例中的排序。
+    </p>
     <h3>已标序</h3>
     {% for item in exists_ordered_legends %}
         &nbsp;&nbsp;> [ {{loop.index0}} ] {{item}}&nbsp;&nbsp; <a href="{{url_for('change_legend_order', alg_name=exists_ordered_legends_encode[loop.index0], idx=loop.index0, method='top')}}" style="font-family: monospace">置顶</a>
