--- a/smart_logger/front_page/template/t_param_adapt.html
+++ b/smart_logger/front_page/template/t_param_adapt.html
@@ -805,7 +805,7 @@
 <div class="plotting_order" id="plotting_order_id">
     <h3>绘制顺序</h3>
     <p>
-        <b>说明</b>：你可以通过本栏来配置哪些不同算法在图像绘制时的绘制顺序。越接近顶部的数据会被越早绘制。主要注意，这个顺序回影响曲线的颜色与线型，如第一个绘制的算法必是红色曲线（圆形标记）。
+        <b>说明</b>：你可以通过本栏来配置哪些不同算法在图像绘制时的绘制顺序。越接近顶部的数据会被越早绘制。主要注意，这个顺序会影响曲线的颜色与线型，如第一个绘制的算法必是红色曲线（圆形标记）。
     </p>
     <h3>已标序</h3>
     {% for item in exists_ordered_curves %}
