update UI, add interface to choose bolden item in table

--- a/smart_logger/front_page/template/t_hello.html
+++ b/smart_logger/front_page/template/t_hello.html
@@ -15,8 +15,8 @@
             position: absolute;
             left: 43%;
             top: 30%;
-            width: 10%;
-            height: 10%;
+            width: 200px;
+            height: 200px;
             /*margin: -170px 0 0 -105px;*/
         }
 
@@ -24,8 +24,8 @@
             position: absolute;
             left: 41.5%;
             top: 29%;
-            width: 11%;
-            height: 22%;
+            width: 210px;
+            height: 220px;
             /*margin: -170px 0 0 -105px;*/
             border: 0.2px dashed #100;
             border-color: rgba(0, 0, 0, 0.2)
